// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzolEj gihGsH"
>
  <li
    className="sc-fzqBkg hUEcUi"
  >
    <span
      className="sc-fznWqX boOzlI"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzqBkg hUEcUi"
  >
    <span
      className="sc-fznWqX boOzlI"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzqBkg hUEcUi"
  >
    <span
      className="sc-fznWqX boOzlI"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzolEj gihGsH"
>
  <li
    className="sc-fzqBkg izsgBO"
  >
    <span
      className="sc-fznWqX boOzlI"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzqBkg izsgBO"
  >
    <span
      className="sc-fznWqX boOzlI"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzqBkg izsgBO"
  >
    <span
      className="sc-fznWqX boOzlI"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
